fixed more layout issues

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -27,7 +27,7 @@ html, body{
 }
 
 .messageList{
-	max-height: 80%;
+	max-height: 75%;
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
